--- a/css/style.gothic.css
+++ b/css/style.gothic.css
@@ -277,7 +277,7 @@ p {
 }
 
 h1 {
-    font-size: 63px;
+    font-size: 43px;
     font-weight: 500;
 }
 
@@ -344,7 +344,7 @@ body {
 .intro-content {
     position: relative;
     z-index: 10;
-    top: 50%;
+    top: 70%;
     opacity: 0.9;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
@@ -601,7 +601,7 @@ body {
 }
 
 .story-content div p {
-    text-indent: 25px;
+    text-indent: 0px;
 }
 
 .story-content div a {
@@ -621,6 +621,25 @@ body {
 }
 
 .story-content div a:hover {
+    background: #6A8D9D;
+    color: #fff;
+}
+#button {
+    border: 1px solid #6A8D9D;
+    color: #6A8D9D;
+    display: block;
+    margin: 29px 5px;
+    padding: 10px 25px;
+    text-decoration: none;
+    text-align: center;
+    -webkir-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+#button:hover {
     background: #6A8D9D;
     color: #fff;
 }
@@ -921,7 +940,14 @@ body {
 /*----- Hover Effect Portfolio Image --------*/
 
 .project {
+    padding: 30px;
+    border: 1px white;
+    border-radius: 5px;
+    height:230px;
+    background: #A1A1A1;
     width: 100%;
+    text-align: center;
+    white-space: nowrap;
     overflow: hidden;
     margin: 15px 0;
     position: relative;
@@ -930,10 +956,18 @@ body {
     box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.3);
 }
 
+.project:before{
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
 .project img {
+    display: inline-block;
+    vertical-align: middle;
     position: relative;
     width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
 }
@@ -976,9 +1010,9 @@ body {
     -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
-    -webkit-border-radius: 50%;
+    /*-webkit-border-radius: 50%;
     -moz-border-radius: 50%;
-    border-radius: 50%;
+    border-radius: 50%;*/
     float: left;
     display: block;
     line-height: 40px;
@@ -986,8 +1020,8 @@ body {
     font-size: 16px;
     text-align: center;
     text-decoration: none;
-    width: 40px;
-    height: 40px;
+    width: 230px;
+    /*height: 40px;*/
     color: #343333;
     -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
     -moz-transition: -moz-transform 0.3s, opacity 0.3s;
