--- a/css/style.gothic.css
+++ b/css/style.gothic.css
@@ -565,6 +565,7 @@ body {
     position: relative;
     padding: 0;
     background: #f5f5f5;
+    height:100vh;
 }
 
                     /*------------------
@@ -688,6 +689,7 @@ body {
 
 .services:hover i {
     box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.15), 0 0 0 40px rgba(255, 255, 255, 0);
+    cursor: default;
 }
 .services p,
 .services h3 {
@@ -1297,6 +1299,9 @@ body {
 .footer {
     background: #6A8D9D;
     padding: 10px 20px 6px 20px;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
 }
 
 .footer a {
