--- a/css/style.gothic.css
+++ b/css/style.gothic.css
@@ -73,6 +73,11 @@
 @import url(http://fonts.googleapis.com/css?family=Hind:300,500);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,400italic);
 
+@font-face {
+    font-family: "trial";
+    src: url("../fonts/domainetext.woff2");
+}
+
                     /*----------------------
                        2 ) Preloader Styles
                       ----------------------*/
@@ -259,7 +264,7 @@ body,
 textarea,
 button,
 input {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "trial",'Open Sans', sans-serif;
 }
 
 h1,
@@ -268,7 +273,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Hind', sans-serif;
+    font-family: "trial",'Hind', sans-serif;
 }
 
 p {
@@ -277,7 +282,7 @@ p {
 }
 
 h1 {
-    font-size: 43px;
+    font-size: 34px;
     font-weight: 500;
 }
 
@@ -327,24 +332,24 @@ body {
 
 .introduction img {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 5%;
+    left: 30%;
 }
 
 .mask {
     width: 100%;
     height: 100%;
-    opacity: 0.8;
+    opacity: 1;
     position: absolute;
     top: 0;
     left: 0;
-    background: #1a1b23;
+    background: linear-gradient(135deg, #172a74, #21a9af);/*#1a1b23;*/
 }
 
 .intro-content {
     position: relative;
     z-index: 10;
-    top: 70%;
+    top: 66%;
     opacity: 0.9;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
@@ -368,7 +373,7 @@ body {
     /*text-decoration: underline;*/
     text-align: center;
     font-weight: 300;
-    font-size: 30px;
+    font-size: 29px;
     -webkir-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
@@ -376,10 +381,38 @@ body {
     transition: all 0.3s;
 }
 
+.about-myself{
+    background: #172a74;
+    padding:20px;
+    margin:20px;
+    border-radius:5px;
+    text-align: left;
+}
+.about-myself p{
+    font-family: "trial";
+    font-size: 17px;
+    color:#fff;
+}
 .social-media {
     font-size: 25px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 11px;
+}
+
+.social-media p {
+    color: #fff;
+    text-decoration: none;
+    outline: 0 none;
+    padding: 0 10px;
+    font-size: 16px;
+}
+
+.social-media span {
+    color: #fff;
+    text-decoration: none;
+    outline: 0 none;
+    padding: 0 10px;
+    font-size: 16px;
 }
 
 .social-media a {
